objects/PicklistUsage__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Lists the objects and fields where a Picklist is used.  This allows for the flexibility of assigning the actual Picklist in the custom setting instead of in the code.  The code only needs to know that a Dynamic Picklist is used, and can look up the specific list from the custom setting object.</description>
    <fields>
        <fullName>Field__c</fullName>
        <inlineHelpText>API Name of the field on the referenced object where the picklist is used</inlineHelpText>
        <label>Field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <inlineHelpText>API Name of the object where the picklist is used</inlineHelpText>
        <label>Object</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <inlineHelpText>Name of referenced picklist custom setting</inlineHelpText>
        <label>Picklist</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>PicklistUsage</label>
</CustomObject>